# Synthelion

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  feature.md  install_aider.py  install_claude.ps1  install_claude.py  install_claude.sh  install_codex.py  install_cursor.py  install_opencode.ps1  install_opencode.py  install_opencode.sh  opencode.json  pyproject.toml  synthelion.config.example.json  synthelion_mcp.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.opencode/plugins/: synthelion.ts
docs/: claude-code-plugin.md  good-first-issues-draft.md
k8s/: backing-services.yaml  configmap.yaml  deployment.yaml  namespace.yaml  service.yaml
scripts/: generate_worddata.py
synthelion/: __init__.py  ai_transparency_notice.py  cache_aligner.py  ccr_store.py  cjk_segmenter.py  cli.py  cluster.py  command_rewrite.py  config.py  content_detector.py  content_router.py  core.py  cost_estimator.py  detector.py  loop_guard.py  models.py  output_mask.py  output_shaper.py  privacy_analyzer.py  privacy_rules.yaml  privacy_session.py  privacy_validators.py  prompt_injection_guard.py  read_lifecycle.py  relevance_filter.py  repeat_diff.py  response_style.py  retriever.py  safety_guard.py  sensitive_guard.py  shared_context.py  simhash.py  success_collapse.py  terminal_noise.py  tokenizer.py  waf_guard.py  waste_analyzer.py  word_provider.py
synthelion/agent/: __init__.py  context_window.py  memory_extractor.py  memory_store.py  rag_agent.py
synthelion/analytics/: __init__.py  _atomic_append.py  ccr_store.py  cluster_registry.py  ledger.py  proxy_log.py  session_db.py  session_store.py  shared_memory.py
synthelion/compressors/: __init__.py  code_compressor.py  diff_compressor.py  html_extractor.py  json_crusher.py  log_compressor.py  tabular.py
synthelion/devtools/: __init__.py  commit_generator.py  crew_service.py  review_service.py  wiki.py
synthelion/integrations/: aider.py  claude_adapter.py  codex.py  crewai_adapter.py  cursor.py  openai_adapter.py  opencode.py
synthelion/nlp/: __init__.py  sentence_detector.py  summarizer.py  text_rank.py  text_splitter.py  topic_segmenter.py
synthelion/plugins/: __init__.py  dashboard.py  dashboard_auth.py  langchain_tools.py  mcp_server.py  openai_tools.py  proxy.py
synthelion/plugins/dashboard_assets/: dashboard.css  dashboard.js  index.html  login.html
synthelion/worddata/: .isl.yaml.br.swp  _index.br  ita.fw.yaml.br
tests/: test_analytics.py  test_caveman_parity.py  test_cli_cluster.py  test_cli_install.py  test_cluster_client.py  test_cluster_registry.py  test_command_rewrite.py  test_config_and_session_store.py  test_dashboard_auth.py  test_dashboard_http.py  test_dashboard_passwd_cli.py  test_enhancements.py  test_loop_guard.py  test_loop_guard_cli.py  test_negation_and_zh.py  test_new_levels.py  test_output_mask.py  test_privacy_guard.py  test_read_lifecycle.py  test_repeat_diff.py  test_response_style.py  test_sensitive_guard.py  test_success_collapse.py  test_synthelion.py  test_terminal_noise.py  test_topic_aware.py  test_waf_guard.py
